Added end point to get all companies and his location /api/companies/get
